--- a/index.html
+++ b/index.html
@@ -381,7 +381,6 @@ footer {
         <h1>Loan Olsztynski</h1>
         <p style="text-align: center;">Passionné de montage vidéo et photo, retrouvez mes créations ici !</p>
         <a class="btn-blue" href="LoanOlsztynskiCV.pdf" download>Télécharger CV</a>
-        <// a class="btn-outline-blue"></a>
     </div>
 </section>
 
@@ -448,7 +447,7 @@ footer {
 <!-- Carrousel Modal -->
 <div id="carousel" class="carousel-container">
     <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
-    <img id="carouselImage" src="" alt="Image du carrousel">
+    <img id="carouselImage" alt="Image du carrousel">
     <button class="next" onclick="moveSlide(1)">&#10095;</button>
 </div>
 
