--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@ footer {
 <!-- Carrousel Modal -->
 <div id="carousel" class="carousel-container">
     <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
-    <img id="carouselImage" alt="Image du carrousel">
+    <img id="carouselImage" alt="Image de carrousel">
     <button class="next" onclick="moveSlide(1)">&#10095;</button>
 </div>
 
