--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ footer {
 <!-- Carrousel Modal -->
 <div id="carousel" class="carousel-container">
     <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
-    <img id="carouselImage" src="" alt="Image de carrousel">
+    <img id="carouselImage" src="" alt="Image du carrousel">
     <button class="next" onclick="moveSlide(1)">&#10095;</button>
 </div>
 
